// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots AuthenticationStep Default 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#FFFFFF",
      "flexGrow": 1,
      "justifyContent": "center",
      "padding": 24,
    }
  }
  testID="authentication-step-1"
>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight={27}
    bbWidth={27}
    color={4278235391}
    focusable={false}
    height={27}
    meetOrSlice={0}
    minX={0}
    minY={0}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        Object {
          "flex": 0,
          "height": 27,
          "width": 27,
        },
      ]
    }
    tintColor={4278235391}
    vbHeight={30}
    vbWidth={30}
    width={27}
  >
    <RNSVGGroup>
      <RNSVGPath
        d="M15 0C6.7 0 0 6.7 0 15s6.7 15 15 15 15-6.7 15-15S23.3 0 15 0zm0 27C8.4 27 3 21.6 3 15S8.4 3 15 3s12 5.4 12 12-5.4 12-12 12z"
        fill={4278235391}
        propList={
          Array [
            "fill",
          ]
        }
      />
      <RNSVGGroup
        fill={4278235391}
        propList={
          Array [
            "fill",
          ]
        }
      >
        <RNSVGPath
          d="M12 12h1.5v-1.5h-2.2c-.5 0-.8.3-.8.7v2.3H12V12zM18.7 10.5h-2.2V12H18v1.5h1.5v-2.3c0-.4-.3-.7-.8-.7zM12 16.5h-1.5v2.2c0 .5.3.8.8.8h2.2V18H12v-1.5zM18 18h-1.5v1.5h2.2c.5 0 .8-.3.8-.8v-2.2H18V18z"
        />
      </RNSVGGroup>
    </RNSVGGroup>
  </RNSVGSvgView>
  <View
    style={
      Object {
        "height": 16,
        "width": 16,
      }
    }
  />
  <View>
    <View
      style={Object {}}
    >
      <Text
        allowFontScaling={true}
        selectable={false}
        style={
          Array [
            Object {
              "marginVertical": 0,
              "textAlign": "center",
            },
            Object {},
            Object {},
          ]
        }
      >
        <Text
          allowFontScaling={true}
          selectable={false}
          style={
            Array [
              Object {},
              Object {},
            ]
          }
        >
          <Text
            allowFontScaling={true}
            style={
              Object {
                "color": "#00B0FF",
                "fontSize": 12,
                "letterSpacing": 5,
                "marginBottom": 12,
                "marginTop": 12,
                "marginVertical": 0,
                "textAlign": "center",
              }
            }
          >
            STEP 
          </Text>
        </Text>
        <Text
          allowFontScaling={true}
          selectable={false}
          style={
            Array [
              Object {
                "fontWeight": "700",
              },
              Object {},
              Object {},
            ]
          }
        >
          <Text
            allowFontScaling={true}
            selectable={false}
            style={
              Array [
                Object {},
                Object {},
              ]
            }
          >
            <Text
              allowFontScaling={true}
              style={
                Object {
                  "color": "#00B0FF",
                  "fontSize": 12,
                  "fontWeight": "700",
                  "letterSpacing": 5,
                  "marginBottom": 12,
                  "marginTop": 12,
                  "marginVertical": 0,
                  "textAlign": "center",
                }
              }
            >
              01
            </Text>
          </Text>
        </Text>
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "height": 24,
        "width": 24,
      }
    }
  />
  <View>
    <View
      style={Object {}}
    >
      <Text
        allowFontScaling={true}
        selectable={false}
        style={
          Array [
            Object {
              "marginVertical": 0,
              "textAlign": "center",
            },
            Object {},
            Object {},
          ]
        }
      >
        <Text
          allowFontScaling={true}
          selectable={false}
          style={
            Array [
              Object {},
              Object {},
            ]
          }
        >
          <Text
            allowFontScaling={true}
            style={
              Object {
                "alignSelf": "center",
                "color": "#546E7A",
                "fontSize": 15,
                "marginBottom": 15,
                "marginTop": 15,
                "marginVertical": 0,
                "textAlign": "center",
              }
            }
          >
            Go to 
          </Text>
        </Text>
        <Text
          allowFontScaling={true}
          selectable={false}
          style={
            Array [
              Object {
                "fontWeight": "700",
              },
              Object {},
              Object {},
            ]
          }
        >
          <Text
            allowFontScaling={true}
            selectable={false}
            style={
              Array [
                Object {},
                Object {},
              ]
            }
          >
            <Text
              allowFontScaling={true}
              style={
                Object {
                  "alignSelf": "center",
                  "color": "#546E7A",
                  "fontSize": 15,
                  "fontWeight": "700",
                  "marginBottom": 15,
                  "marginTop": 15,
                  "marginVertical": 0,
                  "textAlign": "center",
                }
              }
            >
              Settings &gt; Account
            </Text>
          </Text>
        </Text>
        <Text
          allowFontScaling={true}
          style={
            Object {
              "flex": 1,
              "height": 16.8,
            }
          }
        >
          

        </Text>
        <Text
          allowFontScaling={true}
          selectable={false}
          style={
            Array [
              Object {},
              Object {},
            ]
          }
        >
          <Text
            allowFontScaling={true}
            style={
              Object {
                "alignSelf": "center",
                "color": "#546E7A",
                "fontSize": 15,
                "marginBottom": 15,
                "marginTop": 15,
                "marginVertical": 0,
                "textAlign": "center",
              }
            }
          >
            in the upper right-hand corner
          </Text>
        </Text>
      </Text>
    </View>
  </View>
</View>
`;

exports[`Storyshots AuthenticationStep Greather than 9 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#FFFFFF",
      "flexGrow": 1,
      "justifyContent": "center",
      "padding": 24,
    }
  }
  testID="authentication-step-11"
>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight={27}
    bbWidth={27}
    color={4278235391}
    focusable={false}
    height={27}
    meetOrSlice={0}
    minX={0}
    minY={0}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        Object {
          "flex": 0,
          "height": 27,
          "width": 27,
        },
      ]
    }
    tintColor={4278235391}
    vbHeight={30}
    vbWidth={30}
    width={27}
  >
    <RNSVGGroup>
      <RNSVGPath
        d="M15 0C6.7 0 0 6.7 0 15s6.7 15 15 15 15-6.7 15-15S23.3 0 15 0zm0 27C8.4 27 3 21.6 3 15S8.4 3 15 3s12 5.4 12 12-5.4 12-12 12z"
        fill={4278235391}
        propList={
          Array [
            "fill",
          ]
        }
      />
      <RNSVGGroup
        fill={4278235391}
        propList={
          Array [
            "fill",
          ]
        }
      >
        <RNSVGPath
          d="M12 12h1.5v-1.5h-2.2c-.5 0-.8.3-.8.7v2.3H12V12zM18.7 10.5h-2.2V12H18v1.5h1.5v-2.3c0-.4-.3-.7-.8-.7zM12 16.5h-1.5v2.2c0 .5.3.8.8.8h2.2V18H12v-1.5zM18 18h-1.5v1.5h2.2c.5 0 .8-.3.8-.8v-2.2H18V18z"
        />
      </RNSVGGroup>
    </RNSVGGroup>
  </RNSVGSvgView>
  <View
    style={
      Object {
        "height": 16,
        "width": 16,
      }
    }
  />
  <View>
    <View
      style={Object {}}
    >
      <Text
        allowFontScaling={true}
        selectable={false}
        style={
          Array [
            Object {
              "marginVertical": 0,
              "textAlign": "center",
            },
            Object {},
            Object {},
          ]
        }
      >
        <Text
          allowFontScaling={true}
          selectable={false}
          style={
            Array [
              Object {},
              Object {},
            ]
          }
        >
          <Text
            allowFontScaling={true}
            style={
              Object {
                "color": "#00B0FF",
                "fontSize": 12,
                "letterSpacing": 5,
                "marginBottom": 12,
                "marginTop": 12,
                "marginVertical": 0,
                "textAlign": "center",
              }
            }
          >
            STEP 
          </Text>
        </Text>
        <Text
          allowFontScaling={true}
          selectable={false}
          style={
            Array [
              Object {
                "fontWeight": "700",
              },
              Object {},
              Object {},
            ]
          }
        >
          <Text
            allowFontScaling={true}
            selectable={false}
            style={
              Array [
                Object {},
                Object {},
              ]
            }
          >
            <Text
              allowFontScaling={true}
              style={
                Object {
                  "color": "#00B0FF",
                  "fontSize": 12,
                  "fontWeight": "700",
                  "letterSpacing": 5,
                  "marginBottom": 12,
                  "marginTop": 12,
                  "marginVertical": 0,
                  "textAlign": "center",
                }
              }
            >
              11
            </Text>
          </Text>
        </Text>
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "height": 24,
        "width": 24,
      }
    }
  />
  <View>
    <View
      style={Object {}}
    >
      <Text
        allowFontScaling={true}
        selectable={false}
        style={
          Array [
            Object {
              "marginVertical": 0,
              "textAlign": "center",
            },
            Object {},
            Object {},
          ]
        }
      >
        <Text
          allowFontScaling={true}
          selectable={false}
          style={
            Array [
              Object {},
              Object {},
            ]
          }
        >
          <Text
            allowFontScaling={true}
            style={
              Object {
                "alignSelf": "center",
                "color": "#546E7A",
                "fontSize": 15,
                "marginBottom": 15,
                "marginTop": 15,
                "marginVertical": 0,
                "textAlign": "center",
              }
            }
          >
            Go to 
          </Text>
        </Text>
        <Text
          allowFontScaling={true}
          selectable={false}
          style={
            Array [
              Object {
                "fontWeight": "700",
              },
              Object {},
              Object {},
            ]
          }
        >
          <Text
            allowFontScaling={true}
            selectable={false}
            style={
              Array [
                Object {},
                Object {},
              ]
            }
          >
            <Text
              allowFontScaling={true}
              style={
                Object {
                  "alignSelf": "center",
                  "color": "#546E7A",
                  "fontSize": 15,
                  "fontWeight": "700",
                  "marginBottom": 15,
                  "marginTop": 15,
                  "marginVertical": 0,
                  "textAlign": "center",
                }
              }
            >
              Settings &gt; Account
            </Text>
          </Text>
        </Text>
        <Text
          allowFontScaling={true}
          style={
            Object {
              "flex": 1,
              "height": 16.8,
            }
          }
        >
          

        </Text>
        <Text
          allowFontScaling={true}
          selectable={false}
          style={
            Array [
              Object {},
              Object {},
            ]
          }
        >
          <Text
            allowFontScaling={true}
            style={
              Object {
                "alignSelf": "center",
                "color": "#546E7A",
                "fontSize": 15,
                "marginBottom": 15,
                "marginTop": 15,
                "marginVertical": 0,
                "textAlign": "center",
              }
            }
          >
            in the upper right-hand corner
          </Text>
        </Text>
      </Text>
    </View>
  </View>
</View>
`;
